# immutable-logging

./: .gitignore  README.md  immudb_handler.py  integrity_handler.py  main.py  pyproject.toml  requirements.txt  test_immudb_handler.py  test_integrity_handler.py  test_verify_logs.py  verify_logs.py
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-17-python-package.md
docs/superpowers/specs/: 2026-05-17-python-package-design.md
examples/: basic_usage.py  minimal_usage.py  rotation_usage.py  verify_usage.py
src/immutable_logging/: __init__.py  cli.py  immudb.py  integrity.py  verify.py
tests/: __init__.py  test_cli.py  test_immudb.py  test_integrity.py  test_public_api.py  test_summary.py  test_verify.py
